[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
diff-match-patch-rs = "0.1.0-beta.3"
wasm-bindgen = "0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0" }


[lib]
crate-type = ["cdylib", "rlib"]